<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="core_ui_back">Back</string>
</resources>
