<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="route_test1_contract_title">Test 1</string>
</resources>
