<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="route_test2_contract_title">Test 2</string>
</resources>
